lib/stringify-extra/tests/ui/stringify_expr/bad_expression.rs
use stringify_extra::stringify_expr;

fn main() {
    stringify_expr!(match Some(0) {});
}
